--- a/ReactDash/.env.development
+++ b/ReactDash/.env.development
@@ -1,3 +1,3 @@
-VITE_API_BASE=http://127.0.0.1:5000 //local
+VITE_API_BASE=http://127.0.0.1:5000
 
-VITE_API_URL=http://127.0.0.1:5000/api //local
+VITE_API_URL=http://127.0.0.1:5000/api
